<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
    </parent>

    <groupId>no.nav.foreldrepenger.selvbetjening</groupId>
    <artifactId>foreldrepengesoknad-api</artifactId>
    <packaging>pom</packaging>
    <version>0-SNAPSHOT</version>
    <name>foreldrepengesoknad-api</name>
    <description>API for selvbetjening av foreldrepenger og engangsstønad</description>

    <modules>
        <module>kontrakt</module>
        <module>domene</module>
    </modules>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <sonar.projectKey>navikt_foreldrepengesoknad-api</sonar.projectKey>
        <sonar.organization>navikt</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <stonadskonto-regler.version>2.1.1</stonadskonto-regler.version>
        <selvbetjening-felles.version>3.3.1</selvbetjening-felles.version>
        <token-validation-version>4.0.5</token-validation-version> <!-- Fjerner cookie støtte fra versjon 4.1.0-->
        <boot-conditionals.version>5.1.7</boot-conditionals.version>

        <springdoc.version>2.8.9</springdoc.version>
        <tika.version>3.2.0</tika.version>
        <logback.logstash.version>8.1</logback.logstash.version>
        <nv.version>1.29</nv.version>
        <reflections.version>0.10.2</reflections.version>
        <pdfbox.version>3.0.5</pdfbox.version>
        <jacoco.version>0.8.13</jacoco.version>
        <gcp.version>0.243.0</gcp.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>google-cloud-bom</artifactId>
                <version>${gcp.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.selvbetjening</groupId>
                <artifactId>kontrakt</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.selvbetjening</groupId>
                <artifactId>kontrakt</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger</groupId>
                <artifactId>fpsoknad-felles</artifactId>
                <version>${selvbetjening-felles.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Må ha @{argLine} ellers blir properties satt av jacoco-maven-plugin overkrevet -->
                    <argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <release>${java.version}</release>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/foreldrepengesoknad-api</url>
        </repository>
    </distributionManagement>
</project>
